3.10-Project-v1.6/manifests/simple-todo-app-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: simple-todo-app-namespace
  name: simple-todo-app-frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-todo-app-frontend
  template:
    metadata:
      labels:
        app: simple-todo-app-frontend
    spec:
      containers:
        - name: simple-todo-app-frontend
          image: mickeckemi21/simple-todo-app-frontend:2.02
