3.10-Project-v1.6/manifests/postgres-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  namespace: simple-todo-app-namespace
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports:
  - name: web
    port: 5432
  clusterIP: None
  selector:
    app: postgres-app

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: simple-todo-app-namespace
  name: postgres-ss
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres-app
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
        - name: postgres
          image: postgres:13.0
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
