3.10-Project-v1.6/manifests/simple-todo-app-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: simple-todo-app-namespace
  name: simple-todo-app-backend-svc
spec:
  type: NodePort
  selector:
    app: simple-todo-app-backend
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8080
