3.10-Project-v1.6/manifests/simple-todo-app-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: simple-todo-app-namespace
  name: simple-todo-app-frontend-svc
spec:
  type: NodePort
  selector:
    app: simple-todo-app-frontend
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 80
