3.10-Project-v1.6/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: simple-todo-app-namespace
  name: simple-todo-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: simple-todo-app-backend-svc
                port:
                  number: 8081
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: simple-todo-app-backend-svc
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-todo-app-frontend-svc
                port:
                  number: 8082
